Fix spacing issues between non-comment and comment tone items

--- a/common/app/assets/stylesheets/module/containers/_news.scss
+++ b/common/app/assets/stylesheets/module/containers/_news.scss
@@ -45,7 +45,8 @@
     .collection-wrapper {
         @include rem((
             margin-left: $gs-gutter/2 * -1,
-            margin-right: $gs-gutter/2 * -1
+            margin-right: $gs-gutter/2 * -1,
+            margin-top: $gs-baseline
         ));
     }
     .collection__item {
@@ -198,10 +199,6 @@
     }
 }
 .container--news .collection__item--tone-comment {
-    @include rem((
-        margin-bottom: $gs-baseline*2
-    ));
-
     &,
     .item__meta {
         background: $c-neutral7;
@@ -224,20 +221,33 @@
     &:after { right: 0; }
     .item__title,
     .item__standfirst,
-    .item__byline {
+    .item__byline,
+    .item__meta {
         @include rem((
             padding-left: 7px,
             padding-right: 7px
         ));
     }
     .item__meta {
+        width: 100%;
+        @include box-sizing(border-box);
+
         @include rem((
-            left: $gs-gutter/2,
-            right: $gs-gutter/2,
-            padding-left: 7px,
-            padding-bottom: $gs-baseline,
-            margin-bottom: -$gs-baseline
+            padding-bottom: $gs-baseline / 2,
+            margin-bottom: -$gs-baseline / 2
         ));
+    }
+    @include mq(tablet) {
+        .item__meta {
+            width: auto;
+            @include rem((
+                left: $gs-gutter/2,
+                right: $gs-gutter/2,
+                padding-left: 7px,
+                padding-bottom: $gs-baseline,
+                margin-bottom: -$gs-baseline
+            ));
+        }
     }
 }
 .linkslist-container {
